# axum-vue-admin

./: Cargo.toml  README.md
cedar/: authz.cedar  schema.cedarschema  schema.json
scripts/: init.sql
src/: main.rs  playground.rs
src/config/: app.rs  auth.rs  database.rs  logging.rs  mod.rs  openapi.rs  redis.rs  smtp.rs  state.rs
src/entity/: auditlog.rs  cedar_policy_set.rs  cedar_schema.rs  cluster_config.rs  departments.rs  group_roles.rs  mod.rs  prelude.rs  roles.rs  systems.rs  template_links.rs  user_group_members.rs  user_groups.rs  user_roles.rs  users.rs
src/errors/: app_error.rs  mod.rs
src/handlers/: audit_log.rs  auth.rs  cedar_policy.rs  cedar_schema.rs  department.rs  group.rs  me.rs  mod.rs  password.rs  role.rs  sse.rs  user.rs
src/middlewares/: audit_log.rs  auth_guard.rs  mod.rs
src/routes/: mod.rs
src/routes/v1/: auth.rs  cedar_policy.rs  cedar_schema.rs  department.rs  group.rs  health.rs  me.rs  mod.rs  password.rs  role.rs  sse.rs  user.rs
src/schemas/: auth.rs  cedar_policy.rs  department.rs  groups.rs  me.rs  mod.rs  paginated.rs  password.rs  response.rs  role.rs  user.rs
src/services/: audit_log.rs  auth.rs  cache.rs  cedar_auth.rs  cedar_policy.rs  cedar_schema.rs  department.rs  email.rs  groups.rs  me.rs  mod.rs  password.rs  policy_link_manager.rs  role.rs  sse.rs  user.rs
src/utils/: cedar_utils.rs  crypto.rs  date.rs  function.rs  jwt.rs  logging.rs  mod.rs  services.rs  sse.rs  sso_utils.rs  templates.rs  validation.rs
templates/cn/: reset_password.html
templates/en/: reset_password.html
web/: package.json  pnpm-lock.yaml
web/src/: main.js
web/src/api/: authApi.js  (+4 more)
(+58 files in other folders)
