[package]
name = "axum_vue_admin"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
axum = "0.8.0"
headers = "0.4.0"
url = "2.5.0"
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }
tokio = { version = "1.0", features = ["full"] }
sea-orm = { version = "0.12", features = ["sqlx-mysql", "runtime-tokio-rustls", "chrono", "debug-print"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
argon2 = "0.5"
dotenv = "0.15"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tracing-appender = "0.2.3"
anyhow = "1.0.73"
tower-http = { version = "0.6.2", features = ["full"] }
jsonwebtoken = "9.3"
utoipa = { version = "5.3.1", features = ["axum_extras", "debug", "chrono"] }
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }
utoipa-axum = { version = "0.2.0", features = ["debug"] }
async-recursion = "1.0"
tower = "0.5.2"
redis = { version = "0.32.3", features = ["tokio-comp", "connection-manager"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
uuid = { version = "1.8", features = ["v4", "serde"] }
cookie = "0.18.1"
cedar-policy = "4.5.0"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10.9"
askama = "0.14.0"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
toml = "0.8"
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name="playground"
path = "src/playground.rs"

[[bin]]
name="main"
path = "src/main.rs"
